# SymbolicLib

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  codeRules.txt
Examples/: CMakeLists.txt  CMakelists.txt
Examples/BaraffWitkin/: CMakeLists.txt  adjacency.cpp  adjacency.h  bend_quadratic_forces.hpp  cloth.hpp  constraint_forces.hpp  main.cpp  stretch_shear_forces.hpp
Examples/BaraffWitkin/implementation/: bend_quadratic_forces.cpp  cloth.cpp  constraint_forces.cpp  stretch_shear_forces_impl.hpp
Examples/BaraffWitkinAD/: main.cpp  stretch_shear_forces.hpp  stretch_shear_forces_impl.hpp
Examples/BuildCotan/: CMakeLists.txt  main.cpp
Examples/BuildDualCotan/: dualCotan.hpp  main.cpp
Examples/Tutorial/: CMakeLists.txt  main.cpp
cmake/: libigl.cmake
data/: box.off  cloth1.off  cloth2.off  cloth3.off  cloth4.off  d5k.off  plane.off  sphere.mtx  tetsphere1  tetsphere2  tetsphere3
examples/: CMakeLists.txt  dataPath.hpp.in
examples/BaraffWitkin/: bend_quadratic_forces.hpp  cloth.hpp  main.cpp
examples/BaraffWitkin/implementation/: bend_quadratic_forces.cpp  stretch_shear_forces_impl.hpp
examples/BaraffWitkinAD/: main.cpp  stretch_shear_forces_impl.hpp
examples/BuildCotan/: main.cpp
examples/BuildDualCotan/: dualCotan.hpp  main.cpp
examples/Neo-Hookean/: CMakeLists.txt  main.cpp  tetraMesh.cpp  tetraMesh.hpp
examples/Tutorial/: main.cpp
src/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.hpp  ComputeKernel.cpp  ComputeKernel.hpp  ComputeUnit.cpp  ComputeUnit.hpp  ComputeUnitAvailability.h  ComputeUnitAvailability.h.in  ComputeUnitMatrix.hpp  ContainerSupport.h  Decomposition.cpp  Decomposition.hpp  Hashing.cpp  Hashing.hpp  Operations.cpp  Operations.hpp  OperationsMatrix.cpp  Simplify.cpp  Simplify.hpp  StringResources.h  StringTools.cpp  StringTools.hpp  Symbolic.cpp  Symbolic.hpp  SymbolicDifferentiation.cpp  SymbolicDifferentiation.hpp  SymbolicMatrix.cpp  SymbolicMatrix.hpp  SymbolicUtilities.hpp  ThreadTools.h  Timer.cpp  Timer.hpp  Traverse.cpp  Traverse.hpp  Utilities.hpp
src/Examples/BaraffWitkin/: CMakeLists.txt  cloth.hpp  main.cpp  stretch_shear_forces.hpp
src/Examples/BaraffWitkin/implementation/: stretch_shear_forces_impl.hpp
src/Examples/BaraffWitkinAD/: CMakeLists.txt  main.cpp  stretch_shear_forces_impl.hpp
src/Examples/BuildCotan/: CMakeLists.txt  main.cpp
src/Examples/BuildDualCotan/: CMakeLists.txt  dualCotan.hpp  main.cpp
src/Examples/Tutorial/: CMakeLists.txt  main.cpp
src/compiler/: CodeGenerator.cpp  CodeGenerator.hpp  ComputeKernel.cpp  ComputeKernel.hpp  ComputeUnit.cpp  ComputeUnit.hpp
src/matrix/: ComputeUnitMatrix.hpp  OperationsMatrix.cpp  OperationsMatrix.hpp  SimplifyMatrix.cpp  SimplifyMatrix.hpp  SymbolicMatrix.cpp  SymbolicMatrix.hpp
src/scalar/: ComputeKernel.cpp  ComputeUnit.cpp  ComputeUnit.hpp  Decomposition.cpp  Decomposition.hpp  Simplify.cpp  Simplify.hpp  StringResources.h  Symbolic.cpp  Symbolic.hpp  SymbolicDifferentiation.cpp  SymbolicDifferentiation.hpp  SymbolicUtilities.hpp
src/support/: ComputeUnitAvailability.h  ComputeUnitAvailability.h.in  ContainerSupport.h  Hashing.cpp  Hashing.hpp  StringTools.cpp  Traverse.cpp  Traverse.hpp
